# goit-ds-hw-01

./: Dockerfile  README.md  main.py  pyproject.toml
